Better credentials required message

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -1,9 +1,9 @@
-required=Required
 using.ssl=(using SSL)
 server.not.found=IBM i server configuration {0} not found
 
 IBMiServer.ConnectionOk=Connection to {0} (IBM i OS {1}) OK
 IBMiServer.ConnectionFailed=Connection Failed: {0}
+IBMiServer.credentials.required=Credentials are required
 IBMiServer.invalid.ccsid=CCSID must be a number between 0 and 65535
 IBMiServer.ccsid.5026.not.supported=CCSID 5026 is not supported; use 5035 instead
 
