Fixed NPE in ibmiCommand call
CommandCall returns an empty array when there is no messages.

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -24,7 +24,8 @@ IBMi.change.iasp.failed=Failed to change current iASP to {0}
 IBMICommandStep.description=Run an IBM i command
 IBMICommandStep.running=Running IBM i command {0}
 IBMICommandStep.succeeded=IBM i command {0} succeeded
-IBMICommandStep.failed=IBM i command {0} failed: [{1}] {2}
+IBMICommandStep.failed=IBM i command {0} failed
+IBMICommandStep.failed.with.message=IBM i command {0} failed: [{1}] {2}
 
 IBMiRunSQLStep.running=Running SQL query {0}
 IBMiRunSQLStep.rows=Query returned {0} row(s)
