Made two implementation to support splf reading regardless of OS version

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -20,6 +20,7 @@ IBMi.connected=Connected {4} to {0} (IBM i OS {1}) with profile {2} and CCSID {3
 IBMi.connection.failed=Failed to connect to IBM i: {0}
 IBMi.closeSQL.error=Error occurred while closing SQL connection: {0}
 IBMi.change.iasp.failed=Failed to change current iASP to {0}
+IBMi.failed.sql.service.check=Failed to check SQL Service: {0}
 
 IBMICommandStep.description=Run an IBM i command
 IBMICommandStep.running=Running IBM i command {0}
