Added ibmiWaitJob step

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -63,3 +63,9 @@ IBMiGetSpooledFiles.getting=Getting spooled files of job {0}/{1}/{2}
 IBMiGetSpooledFiles.count={0} spooled file(s) retrieved in {1}
 IBMiGetSpooledFiles.cpysplf.failed=CPYSPLF call failed: {0}
 IBMiGetSpooledFiles.cpy.failed=CPY call failed: {0}
+
+IBMiWaitJob.description=Wait for an IBM i to end
+IBMiWaitJob.waiting=Waiting for IBM i job {0} to end
+IBMiWaitJob.timeout.reached=Timeout has been reached ({0} second(s))
+IBMiWaitJob.job.ended=IBM i job {0} has ended
+IBMiWaitJob.error=Exception occurred while retrieving job status: {0}
