Added onMSGW parameter

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -1,6 +1,11 @@
 using.ssl=(using SSL)
 server.not.found=IBM i server configuration {0} not found
 
+OnMessageWait.kill=Kill Job
+OnMessageWait.wait=Wait until Job resumes or is killed
+OnMessageWait.resume=Resume pipeline
+OnMessageWait.fail=Fail pipeline
+
 IBMiServer.ConnectionOk=Connection to {0} (IBM i OS {1}) OK
 IBMiServer.ConnectionFailed=Connection Failed: {0}
 IBMiServer.credentials.required=Credentials are required
@@ -69,3 +74,7 @@ IBMiWaitJob.waiting=Waiting for IBM i job {0} to end
 IBMiWaitJob.timeout.reached=Timeout has been reached ({0} second(s))
 IBMiWaitJob.job.ended=IBM i job {0} has ended
 IBMiWaitJob.error=Exception occurred while retrieving job status: {0}
+IBMiWaitJob.MSGW=Job is in MSGW status
+IBMiWaitJob.MSGW.wait=Pipeline will be suspended until Job {0} resumes
+IBMiWaitJob.MSGW.kill=Killing job {0}
+IBMiWaitJob.MSGW.resume=Resuming pipeline execution
