Added ibmiShellExec step + documentation

--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -26,6 +26,10 @@ IBMICommandStep.running=Running IBM i command {0}
 IBMICommandStep.succeeded=IBM i command {0} succeeded
 IBMICommandStep.failed=IBM i command {0} failed
 IBMICommandStep.failed.with.message=IBM i command {0} failed: [{1}] {2}
+IBMiShellExecStep.description=Run a shell command
+IBMiShellExecStep.running=Running shell command {0}
+IBMiShellExecStep.succeeded=Shell command {0} succeeded
+IBMiShellExecStep.failed=Shell command {0} failed with exit code {1}: {2}
 IBMiRunSQLStep.running=Running SQL query {0}
 IBMiRunSQLStep.rows=Query returned {0} row(s)
 IBMiRunSQLStep.updated=Query update count is {0}
