--- a/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/ibmisteps/Messages.properties
@@ -1,4 +1,4 @@
-using.ssl=(using SSL)
+using.ssl= (using SSL)
 server.not.found=IBM i server configuration {0} not found
 OnMessageWait.kill=Kill Job
 OnMessageWait.wait=Wait until Job resumes or is killed
@@ -16,7 +16,7 @@ IBMi.connect.remote=Connecting to {1}@{0}
 IBMi.connect.local=Connecting to local IBM i
 IBMi.connect.ccsid.5026=CCSID 5026 is not supported; switching to 5035
 IBMi.connect.invalid.ccsid=Invalid CCSID {0}
-IBMi.connected=Connected {4} to {0} (IBM i OS {1}) with profile {2} and CCSID {3}
+IBMi.connected=Connected{4} to {0} (IBM i OS {1}) with profile {2} and CCSID {3}
 IBMi.connection.failed=Failed to connect to IBM i: {0}
 IBMi.closeSQL.error=Error occurred while closing SQL connection: {0}
 IBMi.change.iasp.failed=Failed to change current iASP to {0}
@@ -49,6 +49,7 @@ IBMiPutIFSStep.failed.create.to=Failed to create IFS folder {0}
 IBMiPutIFSStep.to.is.file={0} is an IFS file
 IBMiPutIFSStep.copy.folder=Putting folder {0} into {1}
 IBMiPutIFSStep.copy.file=Putting file {0} into {1}
+IBMiPutIFSStep_base_dir_not_parent=Base directory {0} is not a parent of {1}
 IBMiGetIFSStep.description=Download a remote IFS file or folder into local workspace folder
 IBMiGetIFSStep.from.not.found=IFS File/folder {0} not found
 IBMiGetIFSStep.failed.create.to=Failed to create local folder {0}
